# tmux

./: .gitignore  .travis.yml  Cargo.toml  Makefile.am  alerts.rs  arguments.rs  attributes.rs  build.rs  c2rust-lib.rs  cfg.rs  client.rs  cmd.rs  cmd_attach_session.rs  cmd_bind_key.rs  cmd_break_pane.rs  cmd_capture_pane.rs  cmd_choose_tree.rs  cmd_command_prompt.rs  cmd_confirm_before.rs  cmd_copy_mode.rs  cmd_detach_client.rs  cmd_display_menu.rs  cmd_display_message.rs  cmd_display_panes.rs  cmd_find.rs  cmd_find_window.rs  cmd_if_shell.rs  cmd_join_pane.rs  cmd_kill_pane.rs  cmd_kill_server.rs  cmd_kill_session.rs  cmd_kill_window.rs  cmd_list_buffers.rs  cmd_list_clients.rs  cmd_list_keys.rs  cmd_list_panes.rs  cmd_list_sessions.rs  cmd_list_windows.rs  cmd_load_buffer.rs  cmd_lock_server.rs  (+92 more)
compat/: closefrom.rs  fdforkpty.rs  fgetln.rs  freezero.rs  getdtablecount.rs  getopt.rs  getprogname.rs  imsg.rs  imsg_buffer.rs  recallocarray.rs  setproctitle.rs  strlcat.rs  strlcpy.rs  strtonum.rs  unvis.rs  vis.rs
src/: alerts.rs  arguments.rs  attributes.rs  cfg.rs  client.rs  cmd.rs  cmd_attach_session.rs  cmd_bind_key.rs  cmd_break_pane.rs  cmd_capture_pane.rs  cmd_choose_tree.rs  cmd_command_prompt.rs  cmd_confirm_before.rs  cmd_copy_mode.rs  cmd_detach_client.rs  cmd_display_menu.rs  cmd_display_message.rs  cmd_display_panes.rs  cmd_find.rs  cmd_find_window.rs  cmd_if_shell.rs  cmd_join_pane.rs  cmd_kill_pane.rs  cmd_kill_server.rs  cmd_kill_session.rs  cmd_kill_window.rs  cmd_list_buffers.rs  cmd_list_clients.rs  cmd_list_keys.rs  cmd_list_panes.rs  cmd_parse.rs  (+97 more)
(+39 files in other folders)
